compiler/lume_hir/src/snapshots/lume_hir__lower__tests__use_trait_snapshots@empty.snap
---
source: compiler/lume_hir/src/lower.rs
description: "use Add in Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Use(
            TraitImplementation {
                id: 1119898709443545213,
                name: Type {
                    name: Add,
                    type_params: [],
                    location: <internal>:4:7,
                },
                target: Type {
                    name: std::Int32,
                    type_params: [],
                    location: <internal>:11:16,
                },
                methods: [],
                location: <internal>:0:19,
            },
        ),
    },
    statements: {},
    expressions: {},
}
