compiler/lume_hir/src/snapshots/lume_hir__lower__tests__use_trait_snapshots@generic.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                use Add<Int32> in Int32 {\n                    pub fn add(other: Int32) -> Int32 {}\n                }\"#).unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Impl(
            TraitImplementation {
                id: 1119898709443545213,
                name: Type {
                    name: Add,
                    type_params: [
                        Type {
                            name: std::Int32,
                            type_params: [],
                            location: <internal>:25:30,
                        },
                    ],
                    location: <internal>:24:31,
                },
                target: Type {
                    name: std::Int32,
                    type_params: [],
                    location: <internal>:35:40,
                },
                methods: [
                    TraitMethodImplementation {
                        visibility: Public,
                        name: add,
                        parameters: [
                            Parameter {
                                id: 0,
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:74:79,
                                },
                                param_type: Type {
                                    name: std::Int32,
                                    type_params: [],
                                    location: <internal>:81:86,
                                },
                                location: <internal>:74:86,
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:91:96,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:97:99,
                        },
                        location: <internal>:63:99,
                    },
                ],
                location: <internal>:17:117,
            },
        ),
    },
    statements: {},
    expressions: {},
}
