compiler/lume_hir/src/snapshots/lume_hir__lower__tests__use_trait_snapshots@priv_method.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n                use Add in Int32 {\n                    fn add(other: Int32) -> Int32 {}\n                }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        1119898709443545213: Use(
            TraitImplementation {
                id: 1119898709443545213,
                name: Type {
                    name: Add,
                    type_params: [],
                    location: <internal>:21:24,
                },
                target: Type {
                    name: std::Int32,
                    type_params: [],
                    location: <internal>:28:33,
                },
                methods: [
                    TraitMethodImplementation {
                        visibility: Private,
                        name: add,
                        parameters: [
                            Parameter {
                                id: 0,
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:63:68,
                                },
                                param_type: Type {
                                    name: std::Int32,
                                    type_params: [],
                                    location: <internal>:70:75,
                                },
                                location: <internal>:63:75,
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                name: std::Int32,
                                type_params: [],
                                location: <internal>:80:85,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:86:88,
                        },
                        location: <internal>:56:88,
                    },
                ],
                location: <internal>:17:106,
            },
        ),
    },
    statements: {},
    expressions: {},
}
