compiler/lume_hir/src/snapshots/lume_hir__lower__tests__using_self_as_parameter@invalid.snap
---
source: compiler/lume_hir/src/lower.rs
description: "impl Foo {\n            pub fn bar(a: Int32, self) -> void { }\n        }"
---
SelfNotFirstParameter {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "impl Foo {\n            pub fn bar(a: Int32, self) -> void { }\n        }",
        package: PackageId(
            0,
        ),
    },
    range: 44..48,
    ty: "self",
}
